--- a/dep-test.yml
+++ b/dep-test.yml
@@ -18,6 +18,6 @@ spec:
     spec:
       containers:
       - name: my-world
-        image: nginx:latest
+        image: nginx:1.20.1
         ports:
         - containerPort: 80
